# practice

./: .gitignore  CMakeLists.txt  problem.md  run.sh  summary.md
arch/: conchashmapbenchmark.cc  construct.cc  count_down_latch.h  lock_guard_shared_lock.cc  mmap.cc  poll.cc  sys_unistd.cc  thread_threadlocal.cc
arch/net/: echo_client.cc
common/: CMakeLists.txt  header.h  log.h  util.h  wh_util.h
common/net/: epoll_util.cc  epoll_util.h  net_util.cc  net_util.h
cpp/: .gitignore  algo.cc  aligned.cc  attributes.cc  base.cc  base.h  chrono_util.h  conchashmapbenchmark.cc  construct.cc  cpp_trivia.md  curr.md  event_base.cc  gre_words.h  header  keyshorts.md  knows.md  lambda.cc  libevent.cc  links.md  list.md  local_var_addr.cc  lock_switch_ctx.cc  memo.md  notes.md  poll.cc  run.sh  runq.sh  shard_ptr.cc  sign.md  stl.cc  stock.md  string.cc  sys_unistd.cc  thread.cc  time_align.cc  unit_test.h  unordered_map.cc  vector.cc  w2v.cc  words.md
cpp/adoc/: 01 base.md  gmp.md  gmp_v0.md
cpp/app/: first_num_is_one.cpp  kalman_filter.py  pid_control.py
cpp/aread/: aread_steps.md  linux.md  vscode.md
cpp/aread_code/: gcc.cc  shared_ptr.cc  tbb_conc_hashmap.cc
cpp/arrow/: recall_filter.cc  run.sh  user_info_size.cc
cpp/bandit/: bandit.py  epsilon_greedy.py  random_strategy.py  utils.py
cpp/bigcode/: abstract.py  classify.py  code.py  langchain.py  requirements.txt
cpp/code/: 0001_two_sum.cc
cpp/gcc/: 00-readme.md  01-fstack-protector-strong.md  02-fno-omit-frame-pointer.md  03-异常core无栈信息.md
cpp/gdb/: 01.md
cpp/learn/: 1.md
cpp/net/: echo_server.cc
cpp/nlp/: 01_nlp.md  02_w2v.md  03_dependency_parsing.md  03_句法分析.md  spacy_demo.py
cpp/proto/: run.sh  test_user.cc  user.proto
cpp/protobuf/: 01.md
cpp/py/: DoG.py
cpp/stl/: adetails.cc  adetails.md  algo.cc  conc.cc  fstream.cc  functional.cc  functionor.cc  iterator.cc  map.cc  rand.cc  set.cc  shard_ptr.cc  shared_ptr.cc  sort.cc  sstream.cc  string.cc  swap.cc  template.cc  thread.cc  trait.cc  vptr.cc
cpp/tensorflow/: 01_tf.md  readme.md  tensor.cc  tensor_shape.cc
cpp/test/: test_algo.cc  test_any.cc  test_backtrace.cc  test_base64.cc  test_bit_op.cc  test_conc_queue.cc  test_count_down_latch.cc  test_double_buffer.cc  test_json.cc  test_lru_cache.cc  test_map_find.cc  test_mmap_copy.cc  test_rapidjson.cc  test_rate_limiter.cc  test_reentrant_lock.cc  test_select_topk.cc  test_serialize_utils.cc  test_sort.cc  test_template.cc  test_vector_alloc.cc  test_vector_swap.cc
cpp/tools/: outline.cc
cpp/torch/: autograd.md  readme.md  (+2 more)
dl/: mnist.py
epoll/: echo_client.cc  echo_server.cc
gotest/: run.sh
keras/: imdb.py
practice_epoll/: CMakeLists.txt  doc.md  echo_client.cc  echo_server.cc
practice_epoll/include/: packet.h
protobuf/: goods.proto  run.sh  shop.proto  shop_item.proto  test.cc  user.proto
xcode/: 001.hpp  main.cpp  solu.hpp
(+229 files in other folders)
